--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,8 @@ img {
     max-width: 100%;
 }
 
-/* .store {
-
-    
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    column-gap: 1rem;
-    align-items: center;
-    
+/* .store-background {
+    background-image: linear-gradient( 92.7deg,  rgba(245,212,212,1) 8.5%, rgba(252,251,224,1) 90.2% );
 } */
 
 .store__container{
@@ -39,7 +33,7 @@ img {
     font-size: 4rem;
     text-align: center;
     font-weight: 900;
-    color: var(--darkblue);
+    color: var(--blue);
     margin: 5rem 0;
 }
 .store__grid {
@@ -56,6 +50,12 @@ img {
     text-align: center;
     align-items: center;
 }
+
+
+.product:hover {
+    transform: translateY(-5px);
+}
+
 .product__name {
     font-size: 2rem;
     text-transform:capitalize;
@@ -114,27 +114,7 @@ img {
     background-color: var(--blue);
     color: var(--white2);
     transition: background-color 0.5s;
-}:root{
-    --white: #fff;
-    --white2: #F0F8F5;
-    --lightblue: #6DD7FA;
-    --blue: #1D97F5;
-    --darkblue:#1E4575;
-    --black: #000;
 }
-
-/* Resetear estilos por defecto */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Fuentes */
-body {
-    font-family: 'TT Rationalist Trl', sans-serif;
-}
-
 /* Colores */
 body {
     background-color: #F0F8F5;
@@ -144,7 +124,7 @@ body {
 /* Contenedor de header */
 .container{
     width: 90%;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto; /* Centrar div */
     /* Esta propiedad se encaerga de ocultar los elementos, todos los elementos que tengan clase container se va a ocultar
     OVERFLOW, es si sobresale, todo lo que sobresalga se esconde con el hidden*/
@@ -160,7 +140,7 @@ body {
     width: 100%;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     position: fixed;
-    z-index: 1;
+    z-index: 5;
 
 }
 
@@ -279,7 +259,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semitransparente */
-    z-index: 3; /* Asegura que el modal esté en la parte superior */
+    z-index: 6; /* Asegura que el modal esté en la parte superior */
     justify-content: center;
     align-items: center;
     overflow: auto;
@@ -387,13 +367,58 @@ body {
     font-family: 'TT Rationalist Trl', sans-serif;
                                           
 }
-:root{
-    --white: #fff;
-    --white2: #F0F8F5;
-    --lightblue: #6DD7FA;
-    --blue: #1D97F5;
-    --darkblue:#1E4575;
-    --black: #000;
+
+/* Shopping cart products */
+
+.shopcart__product {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    width: 100%;
+}
+
+.shopcart__container {
+    padding: 20px;
+}
+
+.shopcart-item {
+    display: flex;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 20px;
+}
+
+.shopproduct__image {
+    max-width: 100px;
+    height: auto;
+    border-radius: 8px;
+    margin-right: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.shopproduct-details {
+    flex: 1;
+}
+
+.shopproduct-details h3 {
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+.shopproduct-details p {
+    font-size: 1rem;
+    color: #666;
+    margin: 5px 0;
+}
+
+.shopproduct-details p:last-child {
+    font-weight: bold;
+}
+
+.shopcart-item:last-child {
+    border-bottom: none;
 }
 
 /*Nosotros*/
@@ -448,7 +473,7 @@ body {
 .bannerContent{
     display: block;
     position: absolute;
-    z-index: 20;
+    z-index: 2;
 }
 .bannerTitle{
     color: var(--blue);
@@ -507,7 +532,7 @@ body {
     flex-wrap: wrap; 
     justify-content: space-between; 
     padding:0px 100px;
-  }
+}
   
 .card {
     width: calc(25% - 20px); 
