--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,8 @@ body {
     font-weight: 500;
     color: var(--darkblue);
     background-color: var(--white1);
+    padding: 10px 30px;
+    font-size: 16px;
 }
 
 #cardButton-close:hover {
@@ -369,6 +371,12 @@ body {
 }
 
 /* Shopping cart products */
+
+.total-value{
+    text-align: center;
+}
+
+
 
 .shopcart__product {
     border: 1px solid #ccc;
