--- a/css/styles.css
+++ b/css/styles.css
@@ -234,13 +234,14 @@ body {
     padding: 0;
     margin: 0;
     background-color: #6DD7FA;
-    color: #f0f9f5;
+    color: black;
     border-radius: 50%;
-    width: 35%;
-    height: 35%;
-    font-size: 8px;
+    width: 40%;
+    height: 40%;
+    font-size: 9px;
     position: absolute;
     right: -10%;
+    font-weight: 800;
 }
 /* Estilos para el icono de carrito de compras */
 #carro {
