--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,30 @@ body {
     transition: background-color 0.5s;
 }
 
+#cardButton-empty {
+    /*     background-color: #ff0000;
+        color: #f0f9f5;
+        padding: 5px 10px;
+        border: none;
+        border-radius: 20px;
+        cursor: pointer; */
+        border-style: solid;
+        border-width: 3px;
+        border-color: var(--blue);
+        text-decoration: none;
+        font-weight: 500;
+        color: var(--darkblue);
+        background-color: var(--white1);
+        padding: 10px 30px;
+        font-size: 16px;
+    }
+    
+#cardButton-empty:hover {
+    background-color: var(--blue);
+    color: var(--white2);
+    transition: background-color 0.5s;
+}
+
 .cart-button{
     border-style: solid;
     border-width: 3px;
